Tests terminés (avec erreurs) [couverture 91%-80%]